se deja una sola activity para editar

--- a/CODIGO/AsistenteVentilacion/app/src/main/AndroidManifest.xml
+++ b/CODIGO/AsistenteVentilacion/app/src/main/AndroidManifest.xml
@@ -20,9 +20,8 @@
             android:enabled="true"
             android:exported="true"></receiver>
 
-        <activity android:name=".ui.EditarIngestaBebidaActivity" />
         <activity android:name=".ui.ConfirmarIngestaActivity" />
-        <activity android:name=".ui.EditarIngestaMedicamentoActivity" />
+        <activity android:name=".ui.EditarIngestaActivity" />
         <activity android:name=".ui.MainActivity" />
         <activity android:name=".ui.EnviarSmsActivity">
             <intent-filter>
